Fixed some minor emoji padding

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -23,28 +23,28 @@
 				<button class="btn btn-success" onclick="logEmotion();">Log Emotions</button>
 				<video class="video-padded" width="310em" height="300em" id='vid'></video>
 			</div>
-			<div class="col" style="padding-top: 6.5em;">
-				<div class="row emoji-padded">
-					<div class="col">
+			<div class="col" style="padding-top: 3.5em;">
+				<div class="row">
+					<div class="col col-centred">
 						<h1 id="angerEmoji">😡</h1>
 					</div>
-					<div class="col">
+					<div class="col col-centred">
 						<h1 id="disgustEmoji">🤢</h1>
 					</div>
 				</div>
 				<div class="row emoji-padded">
-					<div class="col">
+					<div class="col col-centred">
 						<h1 id="happyEmoji">😃</h1>
 					</div>
-					<div class="col">
+					<div class="col col-centred">
 						<h1 id="neutralEmoji">😐</h1>
 					</div>					
 				</div>
-				<div class="row">
-					<div class="col">
+				<div class="row emoji-padded">
+					<div class="col col-centred">
 						<h1 id="sadEmoji">😥</h1>
 					</div>
-					<div class="col">
+					<div class="col col-centred">
 						<h1 id="surprisedEmoji">😦</h1>
 					</div>					
 				</div>				
