making emotion data real-time

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -23,7 +23,7 @@
 			</div>
 			<div class="col">
 				<button class="btn btn-success" onclick="startWebcam();">Begin Demo</button>
-				<button class="btn btn-success" onclick="logEmotion();">Log Emotions</button>
+				<button id="logButton" class="btn btn-success" onclick="logEmotion();">Log Emotions</button>
 				<video width="300" height="380" id='vid'></video>
 			</div>
 		</div>
@@ -35,8 +35,7 @@
 
 <!-- Add Scripts -->
 <script src="JS/jquery-3.3.1.js"></script>
-<script src="JS/emotionChart.js"></script>
-<!-- Link external Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
+<script src="JS/emotionChart.js"></script>
 
 </html>
