--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -24,30 +24,54 @@
 				<video class="video-padded" width="400em" height="300em" id='vid'></video>
 			</div>
 			<div class="col">
-				<div class="row">
-					<div class="col col-centred">
-						<h1 id="happyEmoji">😃</h1>
-					</div>
-					<div class="col col-centred">
-						<h1 id="sadEmoji">😥</h1>
-					</div>
-				</div>
-				<div class="row emoji-padded">
-					<div class="col col-centred">
-						<h1 id="neutralEmoji">😐</h1>
-					</div>
-					<div class="col col-centred">
-						<h1 id="angerEmoji">😡</h1>
-					</div>			
-				</div>
-				<div class="row emoji-padded">
-					<div class="col col-centred">
-						<h1 id="disgustEmoji">🤢</h1>
-					</div>
-					<div class="col col-centred">
-						<h1 id="surprisedEmoji">😦</h1>
-					</div>					
-				</div>				
+				<p class="title">Please select how strongly you feel each emotion when the music stops (at a minimum). You may also submit values more frequently than this. <b>Please try to make the sum of values 10.</b></p>
+				<form action="/action_page.php">
+					<p class="title">Happiness</p>
+				  	<input list="happiness" name="happy">
+					  	<datalist id="happiness">
+						    <option value="1">
+						    <option value="2">
+						    <option value="3">
+						    <option value="4">
+						    <option value="5">
+						    <option value="6">
+						    <option value="7">
+						    <option value="8">
+						    <option value="9">
+						    <option value="10">
+					  	</datalist>
+				  	<br>
+				  	<p class="title">Neutrality</p>
+				  	<input list="happiness" name="happy">
+					  	<datalist id="happiness">
+						    <option value="1">
+						    <option value="2">
+						    <option value="3">
+						    <option value="4">
+						    <option value="5">
+						    <option value="6">
+						    <option value="7">
+						    <option value="8">
+						    <option value="9">
+						    <option value="10">
+					  	</datalist>
+				  	<br>
+				  	<p class="title">Sadness</p>
+				  	<input list="happiness" name="happy">
+					  	<datalist id="happiness">
+						    <option value="1">
+						    <option value="2">
+						    <option value="3">
+						    <option value="4">
+						    <option value="5">
+						    <option value="6">
+						    <option value="7">
+						    <option value="8">
+						    <option value="9">
+						    <option value="10">
+					  	</datalist>
+				  	<input type="submit">
+				</form>		
 			</div>
 		</div>
 		<div class="row chart-padded" id="chart">
