working demo testing

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -26,6 +26,11 @@
 	color: rgba(255,255,255,0.8);
 }
 
+#thankyou {
+	padding-left: 10px;
+	visibility: hidden;
+}
+
 .container {
 	min-height: 100%;
 }
