working local demo with server communication

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -26,9 +26,9 @@
 				<video class="video-padded" width="400em" height="300em" id='vid'></video>
 			</div>
 			<div class="col">
-				<p id="instructions">Click play in the Spotify player on the lefthand side, then click "Begin Demo" button.<p>
+				<p id="instructions">Click play in the Spotify playlist on the lefthand side, then click "Begin Demo" button.<p>
 				<p id="instructions">Ensure your face is visible by the webcam.<p>
-				<p id="instructions">When the music stops, please select how strongly you felt each emotion. <b>Please make the sum of values 10.</b></p>
+				<p id="instructions">When the music stops (every 15 mins), please select how strongly you felt each emotion. <b>Please make the sum of values 10.</b></p>
 				<p id="instructions">Submit your results and then repeat instructions with the updated playlist!</p>
 				<div class='userInput'>
 					<p id="emotionTag">Happiness</p>
