removed End Demo button

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -17,7 +17,7 @@
 		<div class="row">
 			<div class="col" id="media-player">
 				<iframe id="spotifyPlayer" src="https://open.spotify.com/embed/user/<%= user_id %>/playlist/<%= playlist_id %>" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-				<button class="btn btn-primary" style="margin-top: 60px; margin-bottom: 6px;" onclick="endDemo();">End Demo</button>
+				<!-- <button class="btn btn-primary" style="margin-top: 60px; margin-bottom: 6px;" onclick="endDemo();">End Demo</button> -->
 				<p id="thankyou" class="title">Thank you for your participation!</p>
 			</div>
 			<div class="col col-centred">
@@ -98,6 +98,6 @@
 <script src="JS/emotionChart.js"></script>
 <!-- Link external Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
-<script src="JS/emotionChart.js"></script>
+<!-- <script src="JS/emotionChart.js"></script> -->
 
 </html>
